<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_app_name">Settings</string>
    <string name="launcher_settings_app_name">Settings</string>
    <string name="launcher_network_app_name">Network</string>
    <string name="launcher_restricted_profile_app_name">Restricted Profile</string>
    <string name="general_action_yes">Yes</string>
    <string name="general_action_no">No</string>
    <string name="action_on_title">On</string>
    <string name="action_off_title">Off</string>
    <string name="action_on_description">On</string>
    <string name="action_off_description">Off</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="unavailable">Unavailable</string>
    <string name="header_category_suggestions">Suggestions</string>
    <string name="header_category_quick_settings">Quick Settings</string>
    <string name="header_category_general_settings">General Settings</string>
    <string name="dismiss_suggestion">Dismiss the suggestion</string>
    <string name="hotwording_title">\"OK Google\" detection</string>
    <string name="hotwording_summary">Talk to Google Assistant anytime</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_preferences">Preferences</string>
    <string name="header_category_accessories">Remote &amp; Accessories</string>
    <string name="header_category_personal">Personal</string>
    <string name="connect_to_network">Connect to network</string>
    <string name="add_an_account">Add an account</string>
    <string name="accounts_category_title">Accounts &amp; sign-in</string>
    <string name="accounts_category_summary_no_account">No accounts</string>
    <plurals name="accounts_category_summary">
        <item quantity="one"><xliff:g id="accounts_number">%1$d</xliff:g> account</item>
        <item quantity="other"><xliff:g id="accounts_number">%1$d</xliff:g> accounts</item>
    </plurals>
    <string name="accounts_slice_summary">Media services, Assistant, Payments</string>
    <string name="connectivity_network_category_title">Network &amp; Internet</string>
    <string name="sound_category_title">Sound</string>
    <string name="applications_category_title">Apps</string>
    <string name="device_pref_category_title">Device Preferences</string>
    <string name="remotes_and_accessories_category_title">Remotes &amp; accessories</string>
    <string name="remotes_and_accessories_category_summary_no_bluetooth_device">No connected Bluetooth devices</string>
    <plurals name="remotes_and_accessories_category_summary">
        <item quantity="one"><xliff:g id="accessories_number">%1$d</xliff:g> accessory</item>
        <item quantity="other"><xliff:g id="accessories_number">%1$d</xliff:g> accessories</item>
    </plurals>
    <string name="display_and_sound_category_title">Display &amp; Sound</string>
    <string name="help_and_feedback_category_title">Help &amp; Feedback</string>
    <string name="privacy_category_title">Privacy</string>
    <string name="privacy_device_settings_category">Device Settings</string>
    <string name="privacy_account_settings_category">Account Settings</string>
    <string name="privacy_assistant_settings_title">Google Assistant</string>
    <string name="privacy_purchases_settings_title">Payment &amp; Purchases</string>
    <string name="privacy_app_settings_category">App Settings</string>
    <string name="privacy_category_summary">Location, Usage &amp; Diagnostics, Ads</string>
    <string name="add_account">Add account</string>
    <string name="account_header_remove_account">Remove account</string>
    <string name="account_sync">Choose synced apps</string>
    <string name="sync_now">Sync now</string>
    <string name="sync_in_progress">Syncing\u2026</string>
    <string name="last_synced">Last synced <xliff:g id="time">%1$s</xliff:g></string>
    <string name="sync_disabled">Disabled</string>
    <string name="account_remove">Remove account</string>
    <string name="account_remove_failed">Can\'t remove account</string>
    <string name="sync_item_title"><xliff:g id="authority" example="Calendar">%s</xliff:g></string>
    <string name="sync_one_time_sync">Sync now<xliff:g id="last_sync_time">\n%1$s</xliff:g></string>
    <string name="sync_failed">Sync failed</string>
    <string name="sync_active">Sync active</string>
    <string name="connectivity_wifi">Wi-Fi</string>
    <string name="connectivity_ethernet">Ethernet</string>
    <string name="connectivity_summary_ethernet_connected">Ethernet connected</string>
    <string name="connectivity_summary_no_network_connected">No network connected</string>
    <string name="connectivity_summary_wifi_disabled">Wi-Fi is turned off</string>
    <string name="wifi_setting_always_scan">Scanning always available</string>
    <string name="wifi_setting_always_scan_context">Let Google\'s location
        service and other apps scan for networks, even when Wi-Fi is off
    </string>
    <string name="wifi_setting_always_scan_content_description">Scanning
        always available, Let Google\'s location service and other apps scan
        for networks, even when Wi-Fi is off</string>
    <string name="wifi_setting_enable_wifi">Wi-Fi</string>
    <string name="connectivity_hint_message">Connect to network</string>
    <string name="connectivity_network_diagnostics">Network diagnostics</string>
    <string name="apps_recently_used_category_title">Recently opened apps</string>
    <string name="apps_see_all_apps">See all apps</string>
    <string name="apps_permissions_category_title">Permissions</string>
    <string name="overlay_security_slice_title"/>
    <string name="update_slice_title"/>
    <string name="all_apps_title">All apps</string>
    <string name="device_daydream">Screen saver</string>
    <string name="device_display_sound">Display &amp; Sound</string>
    <string name="device_sound">Sound</string>
    <string name="device_sound_effects">System sounds</string>
    <string name="device_storage">Storage</string>
    <string name="surround_sound_select_formats">Select formats</string>
    <string name="surround_sound_auto_title">Automatic: Enable only the formats that are supported
        by your audio output device
        "</string>
    <string name="surround_sound_none_title">None: Never use surround sound</string>
    <string name="surround_sound_manual_title">Manual: Selectively enable or disable each format
        supported by this device, regardless of what is supported by your audio output
        device.</string>
    <string name="display_category_title">Display</string>
    <string name="advanced_display_settings_title">Advanced display settings</string>
    <string name="hdmi_cec_settings_title">HDMI-CEC</string>
    <string name="advanced_sound_settings_title">Advanced sound settings</string>
    <string name="game_mode_title">Allow game mode</string>
    <string name="match_content_frame_rate_title">Match content frame rate</string>
    <string name="match_content_frame_rate_seamless">Seamless</string>
    <string name="match_content_frame_rate_non_seamless">Non-seamless</string>
    <string name="match_content_frame_rate_never">Never</string>
    <string name="font_scale_settings_title">Text scaling</string>
    <string name="font_scale_sample_text_title">Sample text</string>
    <string name="font_scale_preview_text_title"
            translation_description="Translate manually. No not adopt any copyrighted material for translation.">
        The Wonderful Wizard of Oz
    </string>
    <string name="font_scale_preview_text_subtitle">Chapter 11: The Wonderful Emerald City of Oz</string>
    <string name="font_scale_preview_text_body">
        Even with eyes protected by the green spectacles Dorothy and her friends were at first dazzled by the brilliancy of the wonderful City.
        The streets were lined with beautiful houses all built of green marble and studded everywhere with sparkling emeralds.
        They walked over a pavement of the same green marble, and where the blocks were joined together were rows of emeralds, set closely, and glittering in the brightness of the sun.
        The window panes were of green glass; even the sky above the City had a green tint, and the rays of the sun were green.
        \n\nThere were many people, men, women and children, walking about, and these were all dressed in green clothes and had greenish skins.
        They looked at Dorothy and her strangely assorted company with wondering eyes, and the children all ran away and hid behind their mothers when they saw the Lion; but no one spoke to them.
        Many shops stood in the street, and Dorothy saw that everything in them was green.
        Green candy and green pop-corn were offered for sale, as well as green shoes, green hats and green clothes of all sorts.
        At one place a man was selling green lemonade, and when the children bought it Dorothy could see that they paid for it with green pennies.
        \n\nThere seemed to be no horses nor animals of any kind; the men carried things around in little green carts, which they pushed before them.
        Everyone seeemed happy and contented and prosperous.
    </string>
    <string name="hdr_format_selection_title">Format selection</string>
    <string name="hdr_format_selection_auto_title">Automatic</string>
    <string name="hdr_format_selection_manual_title">Manual</string>
    <string name="hdr_format_selection_auto_desc">Use device reported formats</string>
    <string name="hdr_format_selection_manual_desc">Choose formats manually from available
        formats</string>
    <string name="send_feedback">Send feedback</string>
    <string name="launch_help">Help Center</string>
    <string name="system_date_time">Date &amp; Time</string>
    <string name="system_language">Language</string>
    <string name="system_keyboard">Keyboard</string>
    <string name="system_home">Home screen</string>
    <string name="system_security">Security &amp; Restrictions</string>
    <string name="system_accessibility">Accessibility</string>
    <string name="system_developer_options">Developer options</string>
    <string name="system_diagnostic">Usage &amp; diagnostics</string>
    <string name="cast_settings_title" translatable="false" />
    <string name="cast_settings_slice_uri" translatable="false" />
    <string name="about_preference">About</string>
    <string name="restart_button_label">Restart</string>
    <string name="about_ads">Ads</string>
    <string name="storage_suggestions" translatable="false" />
    <string name="ambient_slice_storage_uri" translatable="false" />
    <string name="storage_device_storage_section">Device storage</string>
    <string name="storage_removable_storage_section">Removable storage</string>
    <string name="microphone">Microphone</string>
    <string name="camera">Camera</string>
    <string name="system_location">Location</string>
    <string name="device_apps_permissions">App permissions</string>
    <string name="special_access">Special app access</string>
    <string name="help_center_title" translatable="true"/>
    <string name="help_center_link" translatable="false"/>
    <string name="privacy_assistant_slice_uri" translatable="false"/>
    <string name="privacy_purchases_slice_uri" translatable="false"/>
    <string name="ambient_slice_uri" translatable="false" />
    <string name="cec_settings_slice_uri" translatable="false"/>
    <string name="resolution_slice_uri" translatable="false"/>
    <string name="hdr_and_color_format_slice_uri" translatable="false"/>
    <string name="update_slice_uri" translatable="false"/>
    <string name="overlay_security_slice_uri" translatable="false"/>
    <string name="power_and_energy">Power &amp; Energy</string>
</resources>