<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/privacy_category_title"
                  xmlns:custom="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/privacy_device_settings_category" />

    <Preference
        android:key="location"
        android:title="@string/system_location"
        android:fragment="com.android.tv.settings.system.LocationFragment" />
    <Preference
        android:key="microphone"
        android:title="@string/microphone"
        android:fragment="com.android.tv.settings.privacy.SensorFragment" />
    <Preference
        android:key="camera"
        android:title="@string/camera"
        android:fragment="com.android.tv.settings.privacy.SensorFragment" />

    <com.android.tv.twopanelsettings.slices.SlicePreference
        android:key="usageAndDiag"
        android:title="@string/system_diagnostic"
        android:fragment="com.android.tv.twopanelsettings.slices.SliceFragment"
        custom:uri="content://com.google.android.settings.usage/usagediagnostics">
        <intent android:action="com.google.android.settings.USAGE_AND_DIAGNOSTICS_SETTING"/>
    </com.android.tv.twopanelsettings.slices.SlicePreference>
    <com.android.tv.twopanelsettings.slices.CustomContentDescriptionPreference
        android:key="ads"
        android:title="@string/about_ads"
        android:fragment="com.android.tv.settings.privacy.AdsInfoFragment"/>

    <PreferenceCategory
        android:key="accountSettings"
        android:title="@string/privacy_account_settings_category"
        android:visible="false" />

    <com.android.tv.twopanelsettings.slices.SlicePreference
        android:key="assistant"
        android:title="@string/privacy_assistant_settings_title"
        android:fragment="com.android.tv.twopanelsettings.slices.SliceFragment"
        custom:isPreferenceVisible="false"
        custom:uri="@string/privacy_assistant_slice_uri" />

    <com.android.tv.twopanelsettings.slices.SlicePreference
        android:key="purchases"
        android:title="@string/privacy_purchases_settings_title"
        android:visible="false"
        android:fragment="com.android.tv.twopanelsettings.slices.SliceFragment"
        custom:isPreferenceVisible="false"
        custom:uri="@string/privacy_purchases_slice_uri" />

    <PreferenceCategory android:title="@string/privacy_app_settings_category" />

    <com.android.tv.twopanelsettings.slices.SlicePreference
        android:key="update"
        android:title="@string/update_slice_title"
        android:fragment="com.android.tv.twopanelsettings.slices.SliceFragment"
        custom:uri="@string/update_slice_uri"/>

    <Preference
        android:key="permissions"
        android:title="@string/device_apps_permissions">
        <intent android:action="android.intent.action.MANAGE_PERMISSIONS"/>
    </Preference>
    <Preference
        android:key="specialAccess"
        android:title="@string/special_access"
        android:fragment="com.android.tv.settings.device.apps.specialaccess.SpecialAppAccess" />

    <Preference
        android:fragment="com.android.tv.settings.system.SecurityFragment"
        android:key="security"
        android:title="@string/system_security"/>

    <com.android.tv.twopanelsettings.slices.SlicePreference
        android:key="overlay_security"
        android:title="@string/overlay_security_slice_title"
        android:fragment="com.android.tv.twopanelsettings.slices.SliceFragment"
        custom:uri="@string/overlay_security_slice_uri"/>
</PreferenceScreen>
