<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:custom="http://schemas.android.com/apk/res-auto"
                  android:title="@string/device_storage">
    <PreferenceCategory
        android:key="suggestions"
        android:title="@string/storage_suggestions"
        custom:isPreferenceVisible="false" >
        <com.android.tv.twopanelsettings.slices.EmbeddedSlicePreference
            android:key="ambient_storage"
            custom:uri="@string/ambient_slice_storage_uri" >
        </com.android.tv.twopanelsettings.slices.EmbeddedSlicePreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="device_storage"
        android:title="@string/storage_device_storage_section"/>
    <PreferenceCategory
        android:key="removable_storage"
        android:title="@string/storage_removable_storage_section"/>
</PreferenceScreen>
