<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:title="@string/surround_sound_select_formats">
    <PreferenceCategory
        android:key="advanced_sound_settings_option">
        <com.android.tv.settings.RadioPreference
            android:key="surround_sound_auto"
            android:persistent="true"
            app:radioGroup="advanced_sound_settings_option"
            android:title="@string/surround_sound_auto_title"/>
        <com.android.tv.settings.RadioPreference
            android:key="surround_sound_none"
            android:persistent="true"
            app:radioGroup="advanced_sound_settings_option"
            android:title="@string/surround_sound_none_title"/>
        <com.android.tv.settings.RadioPreference
            android:key="surround_sound_manual"
            android:persistent="true"
            app:radioGroup="advanced_sound_settings_option"
            android:title="@string/surround_sound_manual_title"/>
    </PreferenceCategory>
</PreferenceScreen>
