<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/match_content_frame_rate_title">

    <!-- TODO(b/172050661): add the sidebar help text. -->
    <PreferenceCategory
        android:key="match_content_frame_rate_option">
        <com.android.tv.settings.RadioPreference
            android:key="match_content_frame_rate_seamless"
            android:persistent="true"
            app:radioGroup="match_content_frame_rate_option"
            android:title="@string/match_content_frame_rate_seamless"/>
        <com.android.tv.settings.RadioPreference
            android:key="match_content_frame_rate_non_seamless"
            android:persistent="true"
            app:radioGroup="match_content_frame_rate_option"
            android:title="@string/match_content_frame_rate_non_seamless"/>
        <com.android.tv.settings.RadioPreference
            android:key="match_content_frame_rate_never"
            android:persistent="true"
            app:radioGroup="match_content_frame_rate_option"
            android:title="@string/match_content_frame_rate_never"/>
    </PreferenceCategory>
</PreferenceScreen>