<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:title="@string/advanced_display_settings_title">
    <com.android.tv.settings.widget.SwitchWithSoundPreference
        android:key="game_mode"
        android:persistent="true"
        android:title="@string/game_mode_title"/>
    <Preference
        android:fragment="com.android.tv.settings.device.displaysound.HdrFormatSelectionFragment"
        android:key="hdr_format_selection"
        android:persistent="true"
        android:title="@string/hdr_format_selection_title"/>
</PreferenceScreen>
